--- a/static/css/style-liberty.css
+++ b/static/css/style-liberty.css
@@ -3194,7 +3194,8 @@ fieldset:disabled .btn {
 
 .btn-secondary {
     color: var(--secondary-color);
-    background-color: transparent border-color: var(--secondary-color);
+    background-color: transparent ;
+    /* border-color: var(--secondary-color); */
 }
 
 .btn-secondary:hover {
@@ -8383,6 +8384,15 @@ fieldset:disabled .btn {
 
 .invisible {
     visibility: hidden !important
+}
+
+@media (max-width:375px){
+
+    .mh-sm-4{
+        margin-top: 3rem !important;
+        margin-bottom: 3rem !important;
+    }
+    
 }
 
 @media (min-width:375px) {
@@ -19236,25 +19246,26 @@ p.sbmincart-empty-text {
 }
 
 /* Let's get this party started */
-#staplesbmincart form ul::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 5px;
 }
 
 /* Track */
-#staplesbmincart form ul::-webkit-scrollbar-track {
-    -o-box-shadow: inset 0 0 6px #999;
-    -ms-box-shadow: inset 0 0 6px #999;
-    box-shadow: inset 0 0 6px #999;
+::-webkit-scrollbar-track {
+    -o-box-shadow: inset 0 0 6px var(--bg-grey);
+    -ms-box-shadow: inset 0 0 6px var(--bg-grey);
+    box-shadow: inset 0 0 6px var(--bg-grey);
     border-radius: 10px;
 }
 
 /* Handle */
-#staplesbmincart form ul::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background: #3c43a4;
-    -o-box-shadow: inset 0 0 6px #3c43a4;
-    -ms-box-shadow: inset 0 0 6px #3c43a4;
-    box-shadow: inset 0 0 6px #3c43a4;
+    background: var(--primary-color);
+    cursor: pointer;
+    -o-box-shadow: inset 0 0 6px var(--primary-color);
+    -ms-box-shadow: inset 0 0 6px var(--primary-color);
+    box-shadow: inset 0 0 6px var(--primary-color);
 }
 
 /*-- //cart-css --*/
@@ -25271,7 +25282,7 @@ div#owl-demo2 .owl-dots {
 }
 
 
-.w3l-forml-main .form-sub-w3 input {
+.w3l-forml-main .form-sub-w3 input{
     width: 100%;
     padding: 0.7rem 2.5rem 0.7rem 0.7rem;
     text-align: left;
@@ -25588,7 +25599,7 @@ div#owl-demo2 .owl-dots {
 /* Image preview */
 .image-preview {
     margin-left: 5px;
-    height:100px;
+    max-height:100px;
     width:100px;
     overflow: hidden; 
 }
@@ -25606,4 +25617,33 @@ div#owl-demo2 .owl-dots {
     border: 1px solid #ccc;
     border-radius: 50%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Custome textarea */
+.txtara {
+    width: 100%;
+    padding: 0.7rem 2.5rem 0.7rem 0.7rem;
+    text-align: left;
+    background-color: var(--bg-grey);
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--font-color);
+    outline: 0;
+    border: 1px solid var(--bg-grey);
+    border-radius: 4px;
+    resize: none;
+}
+
+.slct-lst{
+    width: 100%;
+    padding: 0.7rem 2.5rem 0.7rem 0.7rem;
+    text-align: left;
+    background-color: var(--bg-grey);
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--font-color);
+    outline: 0;
+    border: 1px solid var(--bg-grey);
+    border-radius: 4px;
+    resize: none;
 }
