--- a/templates/about.html
+++ b/templates/about.html
@@ -49,7 +49,7 @@
                         <i  class="fas fa-arrow-right "></i>In addition to empowering sellers and artists, Re:Scrapify will contribute to making the world a better place. By recycling old items, we reduce waste and promote environmental sustainability. Each transaction echoes our commitment to a greener, more conscious world.
                         </p>
                     </div>
-                    <a href="#" class="btn btn-style btn-primary my-sm-5 mt-3" id="readMoreBtn">
+                    <a href="#" class="btn btn-style btn-primary mh-sm-5 my-5" id="readMoreBtn">
                         <span id="rmtext">Read More</span>
                         <i id='arrow' class="fas fa-arrow-right ms-lg-3 ms-2"></i></a>
                 </div>
