--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                     <div class="form-sub-w3ls card-footer">
-                        <p class="forgot-w3ls">Forgot Password?<a class href="#">Click here</a></p>
+                        <p class="forgot-w3ls">Forgot Password?<a class href="#" data-bs-toggle="modal" data-bs-target="#emailmodal">Click here</a></p>
                         <p class="forgot-w3ls1">Already have an account? <a class href="{% url 'accounts:login' %}">Login here</a></p>
                     </div>
                     <div class="mt-2 submit-button text-center">
@@ -99,6 +99,37 @@
                     </div>
                 </div>
                 </form>
+
+                <!-- Modal for forgot password email -->
+                <div class="modal fade" id="emailmodal" tabindex="-1" aria-labelledby="emailmodallabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h6 class="modal-title title-subw3hny" id="exampleModalLabel">Email to forgot password request</h6>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form method="post" class="signin-form" id="password-change-form" action="{% url 'accounts:check_email'%}" 
+                                autocomplete="off">
+                                    {% csrf_token %}
+                                    <div class="form-sub-w3">
+                                        <input type="email" name="cur_email" id="cur_email" placeholder="Current Email*" class="contact-input"
+                                                required>
+                                    </div>
+                                    
+                                    <div id="password-error" class="text-danger"></div>
+                                    <div class="modal-footer">
+                                        <button type="submit" class="btn btn-primary">Update Password</button>
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- End of modal -->
+                        
 
             </div>
             <!--//form-ends-here-->
@@ -118,6 +149,7 @@
 <script src="{%static 'js/imagepreview.js'%}"></script>
 
 <script src="{%static 'js/showpass.js'%}"></script>
+
 
   
 {% endblock%}
