--- a/templates/home.html
+++ b/templates/home.html
@@ -27,4 +27,177 @@
 	<div style="margin: 8px auto; display: block; text-align:center;">
     
 
+
+        <section class="w3l-ecommerce-main">
+            <!-- /products-->
+            <div class="ecom-contenthny w3l-ecommerce-main-inn py-5">
+                <div class="container py-lg-5">
+                    <div class="ecommerce-grids row">
+                        
+                        <!-- /row-->
+                        <div class="ecommerce-right-hny col-lg-12">
+                            <div class="row ecomhny-topbar">
+                                <div class="col-6 ecomhny-result">
+                                    <h4 class="ecomhny-result-count"> Showing all <span id="itemCount">{{ items.count }}</span> Results</h4>
+                                </div>
+                                <div class="col-6 ecomhny-topbar-ordering">
+    
+                                    <div class="ecom-ordering-select d-flex">
+                                        <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                        <select id="categorySelect">
+                                            <option value="All" selected="selected" >All</option>
+                                            {% for item in items %}
+                                            <option value="{{ item.category_name.category_type }}">{{item.category_name.category_type.upper}}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+    
+                                </div>
+                            </div>
+                            <div class="ecom-products-grids row" id="itemsGrid">
+                                {% for item in items %}
+                                <div class="col-lg-4 col-6 product-incfhny mt-4">
+                                    <div class="product-grid2 shopv">   
+                                        <div class="product-image2">
+                                            <a href="{% url 'products:get_product' item.slug %}">
+                                                <img class="pic-1 img-fluid radius-image" src="/media/{{item.item_image.first.image}}">
+                                                <img class="pic-2 img-fluid radius-image" src="/media/{{item.item_image.first.image}}">
+                                            </a>
+                                            <ul class="social">
+                                                <li><a href="{% url 'products:get_product' item.slug %}" data-tip="Quick View"><span class="fa fa-eye"></span></a></li>
+    
+                                                <li><a href="products.html" data-tip="Add to Cart"><span class="fa fa-shopping-bag"></span></a>
+                                                </li>
+                                            </ul>
+                                            <div class="shopv single-item">
+                                                <form action="#" method="post">
+                                                    <input type="hidden" name="cmd" value="_cart">
+                                                    <input type="hidden" name="add" value="1">
+                                                    <input type="hidden" name="shopv_item" value="Checkered Casual Shirt">
+                                                    <input type="hidden" name="amount" value="899.99">
+                                                    <button type="submit" class="shopv-cart pshopv-cart add-to-cart">
+                                                        Add to Cart
+                                                    </button>
+                                                </form>
+                                            </div>
+                                        </div>
+                                        <div class="product-content">
+                                            <h3 class="title"><a href="product-single.html">{{item.item_name}} </a></h3>
+                                            <span class="price"><del>$975.00</del>{{item.price}}</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% endfor %}
+                                
+    
+                            </div>
+                            {% comment %} <div class="row w3l-3-grids mt-5">
+                                <div class="col-md-6 mt-md-0">
+                                    <div class="grids3-info position-relative">
+                                        <a href="products-1.html" class="d-block zoom"><img src="assets/images/banner5.jpg" alt="" class="img-fluid news-image"></a>
+                                        <div class="w3-grids3-info">
+                                            <h4 class="gdnhy-1"><a href="products.html">Platform Velvet <br>Sandals</a>
+    
+                                            </h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mt-md-0 mt-4 grids3-info2">
+                                    <div class="grids3-info second position-relative">
+                                        <a href="products-1.html" class="d-block zoom"><img src="assets/images/banner4.jpg" alt="" class="img-fluid news-image"></a>
+                                        <div class="w3-grids3-info second">
+                                            <h4 class="gdnhy-1"><a href="products.html">Pebbled Weekend <br>Bag</a>
+    
+                                            </h4>
+    
+                                        </div>
+                                    </div>
+                                </div>
+    
+                            </div>
+                            <div class="pagination">
+                                <ul>
+                                    <li class="prev"><a href="#page-number"><span class="fa fa-angle-double-left"></span></a></li>
+                                    <li><a href="#page-number" class="active">1</a></li>
+                                    <li><a href="#page-number">2</a></li>
+                                    <li><a href="#page-number">3</a></li>
+    
+                                    <li class="next"><a href="#page-number"><span class="fa fa-angle-double-right"></span></a></li>
+                                </ul>
+                            </div> {% endcomment %}
+                        </div>
+                    </div>
+    
+                </div>
+            </div>
+        </section>
+{% endblock %}
+
+{% block js %}
+
+<script>
+    document.getElementById('categorySelect').addEventListener('change', function(){
+        var selectedCategory = this.value;
+        fetchProducts(selectedCategory);
+    });
+
+    function fetchProducts(category){
+        fetch('category_item/?category=' + category)
+        .then(response => response.json())
+        .then(data => {
+            if (data.success){
+                updateItemGrid(data.items);
+                console.log(data.items);
+            } else {
+                alert(data.message);
+            }
+        })
+        .catch(error => {
+            alert(error);
+            console.log(error);
+        });
+    }
+
+    function updateItemGrid(items){
+        var ItemsGrid = document.querySelector('.ecom-products-grids');
+        ItemsGrid.innerHTML = '';
+        var count = 0;
+        items.forEach(function(item){
+            count += 1;
+            var itemHTML = `<div class="col-lg-4 col-6 product-incfhny mt-4">
+                <div class="product-grid2 shopv">   
+                    <div class="product-image2">
+                        <a href="{% if item.slug %}{% url 'products:get_product' item.slug %}{% endif %}">
+                            <img class="pic-1 img-fluid radius-image" src="${item.image}">
+                            <img class="pic-2 img-fluid radius-image" src="${item.image}">
+                        </a>
+                        <ul class="social">
+                            <li><a href="{% if item.slug %}{% url 'products:get_product' item.slug %}{% endif %}" data-tip="Quick View"><span class="fa fa-eye"></span></a></li>
+                            <li><a href="products.html" data-tip="Add to Cart"><span class="fa fa-shopping-bag"></span></a></li>
+                        </ul>
+                        <div class="shopv single-item">
+                            <form action="#" method="post">
+                                <input type="hidden" name="cmd" value="_cart">
+                                <input type="hidden" name="add" value="1">
+                                <input type="hidden" name="shopv_item" value="Checkered Casual Shirt">
+                                <input type="hidden" name="amount" value="899.99">
+                                <button type="submit" class="shopv-cart pshopv-cart add-to-cart">Add to Cart</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <h3 class="title"><a href="product-single.html">${item.item_name}</a></h3>
+                        <span class="price"><del>$975.00</del>${item.price}</span>
+                    </div>
+                </div>
+            </div>`;
+            
+
+            ItemsGrid.insertAdjacentHTML('beforeend', itemHTML);
+        });
+        document.getElementById('itemCount').innerText = count;
+    }
+</script>
+
+
 {% endblock %}
