--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-<title>{% block title %}Home - Re:scrapify{% endblock %}</title>
+<title>{% block title %}Product - Re:scrapify{% endblock %}</title>
 {% block body %}
 <section class="w3mid-gap"></section>
 <!--/Banner-Start-->
