--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -145,18 +145,17 @@
                                     <li>
                                         <a href="#">{{item.category_name}}</a>
                                     </li>
-                                    <li class="gap">
-                                        <a href="#">Cash on Delivery available</a>
-                                    </li>
+                                
                                 </ul>
                             </div>
                         </div>
                         <div class="description mb-4">
-                            <h5>Check delivery, payment options and charges at your location</h5>
-                            <form action="#" class="d-flex" method="post">
+                            {% comment %} <h5>Check delivery, payment options and charges at your location</h5> {% endcomment %}
+                            <h5>Cash on Delivery available</h5>
+                            {% comment %} <form action="#" class="d-flex" method="post">
                                 <input type="text" placeholder="Enter pincode" required="">
                                 <button class="submit btn btn-style btn-primary ms-3" type="submit">Check</button>
-                            </form>
+                            </form> {% endcomment %}
                         </div>
 
                     </div>
